--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,7 +3,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: "Roboto", system-ui;
 }
 
@@ -18,10 +17,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  min-width: 280px;
 }
 
 .app {
   position: relative;
+  overflow: hidden;
   margin: 50px auto;
   width: 600px;
   height: 600px;
@@ -156,15 +157,15 @@ ul li p {
 }
 
 .active {
-  border: 3px solid #007bff;
+  outline: 3px solid #007bff;
 }
 
 .error {
-  border: 3px solid red;
+  outline: 3px solid red;
 }
 
 .done {
-  border: 3px solid green;
+  outline: 3px solid green;
 }
 
 /* Bouton valider */
@@ -180,7 +181,7 @@ button {
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
-  transition: background 0.3s;
+  transition: background-color 0.3s;
 }
 
 .nextButton {
@@ -269,6 +270,6 @@ button:hover {
   }
   .modal {
     width: 80%;
-    height: 400px;
+    height: auto;
   }
 }/*# sourceMappingURL=style.css.map */
