permettre à l'utilisateur de cocher et decocher une option

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -47,6 +47,7 @@ body {
 }
 .app_quiz {
   background: #f7f7f7;
+  height: 100%;
   position: relative;
   padding: 20px 0;
   transform: translateX(100%);
@@ -120,7 +121,7 @@ body {
 /* Style de la liste des réponses */
 ul {
   width: 400px;
-  margin: auto;
+  margin: 30px auto;
   list-style: none;
   padding: 0;
 }
@@ -260,9 +261,10 @@ button:hover {
   .app_quiz_options {
     height: calc(50% - 60px);
     width: 90%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
   }
   .app button {
     width: 90%;
